<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/tv_id"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="30dp"
        android:text="@string/signIn_id"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/sign_id_et"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/signIn_pw"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_id"
        />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/signIn_pw_et"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:onClick="onButton1Clicked"
        android:text="@string/signIn_Login"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#363F87"
        android:textColorHint="#080D27"
        android:textColorLink="#080D29"
        android:textStyle="bold"
        android:textSize="@string/btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839"
        />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:onClick="onButton1Clicked"
        android:text="@string/signIn_signup"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#0F143C"
        android:textColorHint="#070B20"
        android:textColorLink="#0F163E"
        android:textStyle="bold"
        android:textSize="@string/btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        />


</androidx.constraintlayout.widget.ConstraintLayout>